--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
   <!-- 인트로 화면 -->
   <div class="intro" id="intro">
-    <img src="사용 요소/intro-cat.png" alt="인트로 고양이" class="intro-image">
-    <img src="사용 요소/intro-title.png" alt="인트로 제목" class="intro-title">
-    <img src="사용 요소/start-button.png" alt="시작 버튼" class="start-button" onclick="showCookiePage()">
+    <img src="assets/intro-cat.png" alt="인트로 고양이" class="intro-image">
+    <img src="assets/intro-title.png" alt="인트로 제목" class="intro-title">
+    <img src="assets/start-button.png" alt="시작 버튼" class="start-button" onclick="showCookiePage()">
   </div>
 
   <!-- 쿠키 열기 화면 -->
   <div class="cookie-page hidden" id="cookie-page">
     <h1>쿠키를 열어보세요!</h1>
-    <img src="사용 요소/fortune-cookie-closed.png" alt="포춘쿠키" id="cookie" onclick="tapCookie()">
-    <img src="사용 요소/cookie-reveal-button.png" alt="내용 확인 버튼" id="reveal-btn" class="hidden" onclick="showResultPage()">
+    <img src="assets/fortune-cookie-closed.png" alt="닫힌 쿠키" id="cookie" onclick="tapCookie()">
+    <img src="assets/cookie-reveal-button.png" alt="내용 확인 버튼" id="reveal-btn" class="hidden" onclick="showResultPage()">
   </div>
 
   <!-- 결과 화면 -->
   <div class="result-page hidden" id="result-page">
-    <img src="사용 요소/result-title.png" alt="결과 위 문구" class="result-title">
-    <img src="사용 요소/result-cat.png" alt="결과 쪽지와 고양이" class="result-cat">
-    <img src="사용 요소/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
-    <img src="사용 요소/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
+    <img src="assets/result-title.png" alt="결과 위 문구" class="result-title">
+    <img src="assets/result-cat.png" alt="결과 쪽지와 고양이" class="result-cat">
+    <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
+    <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
   </div>
 
   <script src="scripts.js"></script>
