--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fortune Cookie</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fortune Cookie</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="intro-screen" class="screen">
-        <h1 class="intro-title">오늘의 포춘쿠키</h1>
-        <img src="assets/intro-cat.png" alt="Intro Cat" class="intro-cat">
-        <button id="start-button" class="button">시작하기</button>
-    </div>
+  <!-- 인트로 화면 -->
+  <div class="intro" id="intro">
+    <img src="assets/intro-cat.png" alt="인트로 고양이" class="intro-image">
+    <img src="assets/intro-title.png" alt="인트로 제목" class="intro-title">
+    <img src="assets/start-button.png" alt="시작 버튼" class="start-button" onclick="showCookiePage()">
+  </div>
 
-    <div id="cookie-screen" class="screen hidden">
-        <p class="instruction">포춘쿠키를 탭하세요!</p>
-        <img id="cookie-image" src="assets/fortune-cookie-closed.png" alt="Fortune Cookie" class="cookie">
-    </div>
+  <!-- 쿠키 열기 화면 -->
+  <div class="cookie-page hidden" id="cookie-page">
+    <h1>쿠키를 열어보세요!</h1>
+    <img src="assets/fortune-cookie-closed.png" alt="닫힌 쿠키" id="cookie" onclick="tapCookie()">
+    <img src="assets/cookie-reveal-button.png" alt="내용 확인 버튼" id="reveal-btn" class="hidden" onclick="showResultPage()">
+  </div>
 
-    <div id="result-screen" class="screen hidden">
-        <div class="result-container">
-            <img src="assets/result-cat.png" alt="Result Cat" class="result-cat">
-            <p id="fortune-text" class="fortune-text">당신의 운세가 여기 표시됩니다!</p>
-        </div>
-        <div class="button-group">
-            <button id="home-button" class="button">홈으로</button>
-            <button id="share-button" class="button">공유하기</button>
-        </div>
-    </div>
+  <!-- 결과 화면 -->
+  <div class="result-page hidden" id="result-page">
+    <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
+    <div class="fortune-text" id="fortune-text"></div>
+    <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
+    <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
+  </div>
 
-    <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
