--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fortune Cookie</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fortune Cookie</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 인트로 화면 -->
-  <div class="intro" id="intro">
-    <img src="assets/intro-cat.png" alt="인트로 고양이" class="intro-image">
-    <img src="assets/intro-title.png" alt="인트로 제목" class="intro-title">
-    <img src="assets/start-button.png" alt="시작 버튼" class="start-button" onclick="showCookiePage()">
-  </div>
+    <div id="intro-screen" class="screen">
+        <h1>오늘의 포춘쿠키</h1>
+        <img src="사용 요소/intro-cat.png" alt="인트로 고양이">
+        <button id="start-button">시작하기</button>
+    </div>
 
-  <!-- 쿠키 열기 화면 -->
-  <div class="cookie-page hidden" id="cookie-page">
-    <h1>쿠키를 열어보세요!</h1>
-    <img src="assets/fortune-cookie-closed.png" alt="닫힌 쿠키" id="cookie" onclick="tapCookie()">
-    <img src="assets/cookie-reveal-button.png" alt="내용 확인 버튼" id="reveal-btn" class="hidden" onclick="showResultPage()">
-  </div>
+    <div id="cookie-screen" class="screen hidden">
+        <p>쿠키를 탭하세요!</p>
+        <img id="cookie-image" src="사용 요소/fortune-cookie-closed.png" alt="닫힌 쿠키">
+    </div>
 
-  <!-- 결과 화면 -->
-  <div class="result-page hidden" id="result-page">
-    <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
-    <div class="fortune-text" id="fortune-text"></div>
-    <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
-    <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
-  </div>
+    <div id="result-screen" class="screen hidden">
+        <div>
+            <img src="사용 요소/result-cat.png" alt="결과 고양이">
+            <p id="fortune-text">오늘 당신의 운세는...</p>
+        </div>
+        <button id="home-button">홈으로</button>
+        <button id="share-button">공유하기</button>
+    </div>
 
-  <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
