--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 
     <!-- 결과 화면 -->
     <div class="result-page hidden" id="result-page">
+      <img src="assets/result-title.png" alt="오늘 당신의 운세는" class="result-title">
       <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
       <div class="fortune-text" id="fortune-text"></div>
       <div class="result-buttons">
         <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
-        <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
+        <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareKakao()">
       </div>
     </div>
   </div>
