--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <!-- 결과 화면 -->
     <div class="result-page hidden" id="result-page">
       <img src="assets/result-title.png" alt="오늘 당신의 운세는" class="result-title">
-      <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
-      <div class="fortune-text" id="fortune-text"></div>
+      <div class="result-cat-container">
+        <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
+        <div class="fortune-text" id="fortune-text"></div>
+      </div>
       <div class="result-buttons">
         <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
         <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareKakao()">
