--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
 
     <!-- 쿠키 열기 화면 -->
     <div class="cookie-page hidden" id="cookie-page">
-      <h1>쿠키를 열어보세요!</h1>
+      <h1 id="cookie-message">쿠키를 열어보세요!</h1>
       <img src="assets/fortune-cookie-closed.png" alt="닫힌 쿠키" id="cookie" onclick="tapCookie()">
       <img src="assets/cookie-reveal-button.png" alt="내용 확인 버튼" id="reveal-btn" class="hidden" onclick="showResultPage()">
     </div>
 
     <!-- 결과 화면 -->
     <div class="result-page hidden" id="result-page">
-      <img src="assets/result-title.png" alt="오늘 당신의 운세는" class="result-title">
-      <div class="result-cat-container">
-        <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
-        <div class="fortune-text" id="fortune-text"></div>
-      </div>
+      <img src="assets/result-title.png" alt="결과 제목" class="result-title">
+      <img src="assets/result-cat.png" alt="결과 고양이와 쪽지" class="result-cat">
+      <div class="fortune-text" id="fortune-text"></div>
       <div class="result-buttons">
         <img src="assets/result-home.png" alt="홈으로 버튼" class="result-home" onclick="resetPage()">
-        <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareKakao()">
+        <img src="assets/result-share-button.png" alt="공유하기 버튼" class="result-share" onclick="shareFortune()">
       </div>
     </div>
   </div>
