--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div>
     </div>
   </div>
+  
+  <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+
 
   <script src="scripts.js"></script>
 </body>
